make sure we only depend on core modules

--- a/dist.ini
+++ b/dist.ini
@@ -9,3 +9,6 @@ AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
 stopwords = freebsd
 stopwords = linux
+
+[OnlyCorePrereqs]
+starting_version = 5.014
