--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: perl
 script: prove -lr t
+sudo: false
 install:
   - cpanm -n -q --skip-satisfied --installdeps .
 perl:
-  - "5.21"
+  - "5.22"
   - "5.20"
   - "5.18"
   - "5.16"
